...
    app:civ_border_width="1dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/recipe_step_number"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:includeFontPadding="false"
    android:textAlignment="center"
    android:textAppearance="@style/AppText.RecipeDetails.StepNumber"
    app:layout_constraintBottom_toBottomOf="@+id/recipe_step_number_frame"
    app:layout_constraintEnd_toEndOf="@+id/recipe_step_number_frame"
    app:layout_constraintStart_toStartOf="@+id/recipe_step_number_frame"
    app:layout_constraintTop_toTopOf="@+id/recipe_step_number_frame"
    tools:text="14" />

  <TextView
    android:id="@+id/recipe_step_description"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/step_item_margin"
    android:layout_marginBottom="@dimen/step_item_margin"
    android:layout_marginStart="@dimen/content_padding"
    android:layout_marginEnd="@dimen/content_spacing"
...
